# falkordb-rs-next-gen

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  flow-tests.txt  fuzz.sh  input.txt  pytest.ini  tck_done.txt
.github/: dependabot.yml
.github/workflows/: rust-pr-close.yml  rust-pr.yml  rust-push.yml  rust.yml
dev/bench/: data.js
falkordb-macro/: Cargo.toml
falkordb-macro/src/: lib.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_runtime.rs
graph/: Cargo.toml  build.rs
graph/src/: GraphBLAS.rs  ast.rs  cypher.rs  functions.rs  graph.rs  indexer.rs  iter.rs  lib.rs  matrix.rs  parser.rs  pending.rs  planner.rs  runtime.rs  tensor.rs  tree.rs  value.rs  vector.rs
graph/src/graph/: graph.rs  matrix.rs  mod.rs  tensor.rs  vector.rs
graph/src/runtime/: functions.rs  mod.rs  pending.rs  runtime.rs  value.rs
runtime-fuzz-target/: Cargo.toml
runtime-fuzz-target/src/: main.rs
src/: lib.rs
tests/: bench.py  common.py  conftest.py  record.py  requierment.txt  requierments.txt  test_bench.py  test_e2e.py  test_functions.py  test_ldbc.py
tests/tck/: test_tck.py
tests/tck/falkor_utils/: assertions.py  graphs.py
tests/tck/features/clauses/match/: Match1.feature  Match2.feature
tests/tck/features/clauses/set/: Set1.feature
tests/tck/features/expressions/quantifier/: Quantifier1.feature  Quantifier10.feature  Quantifier11.feature  Quantifier12.feature  Quantifier2.feature  Quantifier3.feature  Quantifier4.feature  Quantifier9.feature
tests/tck/features/expressions/typeConversion/: TypeConversion1.feature  TypeConversion2.feature  TypeConversion3.feature  TypeConversion4.feature
tests/tck/features/steps/: Steps.py
