[workspace]
members = [
    "graph",
    "falkordb-macro", ]

[package]
name = "falkordb-rs"
version = "0.1.0"
edition = "2024"
description = "Graph database"
license = "MIT"
repository = "https://github.com/FalkorDB/falkordb-rs-next-gen"
readme = "README.md"
keywords = ["graph", "database"]
categories = ["database"]

[lib]
crate-type = ["cdylib", "rlib"]
name = "falkordb"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis-module = { git = "https://github.com/RedisLabsModules/redismodule-rs", tag = "v2.1.2" }
redis-module-macros = { git = "https://github.com/RedisLabsModules/redismodule-rs", tag = "v2.1.2" }
graph = { path = "graph", version = "0.1.0" }


[profile.release]
codegen-units = 1
lto = true
# debug = true
# strip = false