[package]
name = "falkordb-macro"
version = "0.1.0"
edition = "2024"
description = "core macros"
license = "MIT"
repository = "https://github.com/FalkorDB/falkordb-rs-next-gen"
readme = "../README.md"
keywords = ["graph", "database"]
categories = ["database"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = { version = "2.0.104", features = ["full"] }
