[package]
name = "graph"
version = "0.1.0"
edition = "2024"
description = "Core of the database"
license = "MIT"
repository = "https://github.com/FalkorDB/falkordb-rs"
keywords = ["graph", "database"]
categories = ["data-structures", "database"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roaring = "0.10.12"
regex = "1.11.1"
falkordb-macro = { path = "../falkordb-macro" }
orx-tree = "1.5.0"
rand = "0.9.1"
