[package]
name = "runtime-fuzz-target"
version = "0.1.0"
edition = "2024"
description = "AFL++ fuzz of the database"
license = "MIT"
repository = "https://github.com/FalkorDB/falkordb-rs-next-gen"
readme = "../README.md"
keywords = ["graph", "database"]
categories = ["data-structures", "database"]

[dependencies]
afl = "*"

[dependencies.graph]
path = "../graph"